--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,5 @@
 <html>
     <title>Website</title>
     <h1>Please Work</h1>
-    <script src="../static/front-end.js"></script>
+    <!-- <script src="../static/front-end.js"></script> -->
 </html>
