--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,5 @@
 <html>
     <title>Website</title>
     <h1>Please Work</h1>
-    <!-- <script src={{ url_for('static', filename='front-end.js') }}></script> -->
+    <script src={{ url_for('static', filename='front-end.js') }}></script>
 </html>
