--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <title>Website</title>
-    <h id="h1">Please Work</h1>
+    <h1 id="h1">Please Work</h1>
     <script src={{ url_for('static', filename='front-end.js') }}></script>
 </html>
