--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,7 @@
 
     <h1 id="h1"></h1>
     <h2 id="h2">Not Clicked</h2>
+    <h3 id="h3">Not Clicked</h3>
+    <h4 id="h4">Not Clicked</h4>
     <script src={{ url_for('static', filename='front-end.js') }}></script>
 </html>
