--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,7 @@
     <input type="text" name="lname" value="" id="dest"><br>
     <button id = "submit">Click me</button> 
 
-    <h1 id="h1"></h1>
-    <h2 id="h2">Not Clicked</h2>
-    <h3 id="h3">Not Clicked</h3>
-    <h4 id="h4">Not Clicked</h4>
+    <div id="div1">
+    </div>
     <script src={{ url_for('static', filename='front-end.js') }}></script>
 </html>
