--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
     <input type="text" name="fname" value="" id="src"><br>
     <input type="text" name="lname" value="" id="dest"><br>
-    <button id="submit">Click me</button> 
+    <p id="submit">Click me</p> 
 
     <h1 id="h1"></h1>
     <h2 id="h2">Not Clicked</h2>
