--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,15 @@
 <html>
     <title>Website</title>
 
-    <input type="text" name="fname" value="" id="src"><br>
-    <input type="text" name="lname" value="" id="dest"><br>
-    <button id="submit">Click me</button> 
-    <h1 id="h1"></h1>
+    <body>
+
+        {% include 'stations_sg.svg' %}
+        
+        <input type="text" name="fname" value="" id="src"><br>
+        <input type="text" name="lname" value="" id="dest"><br>
+        <button id="submit">Click me</button> 
+        <h1 id="h1"></h1>
+    </body>
 
     <script src={{ url_for('static', filename='front-end.js') }}></script>
 </html>
