--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 
     <body>
 
-        {% include 'stations_sg.svg' %}
-        
+        {% include 'waypoints.svg' %}
+
         <input type="text" name="fname" value="" id="src"><br>
         <input type="text" name="lname" value="" id="dest"><br>
         <button id="submit">Click me</button> 
