--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
     <body>
 
-        {% include 'waypoints.svg' %}
+        {% include 'waypoints_gfu.svg' %}
 
         <input type="text" name="fname" value="" id="src"><br>
         <input type="text" name="lname" value="" id="dest"><br>
