Added html title, added wheelchair warnings

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>Website</title>
+    <title>Shortest Path Around Campus</title>
 
     <body>
         {% include 'waypoints_gfu.svg' %}
