--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
     <body>
         {% include 'waypoints_gfu.svg' %}
     </body>
+    <label for="myCheck">Handicap:</label> 
+    <input type="checkbox" id="myCheck" onclick="handicap()">
     <h1 id="h1"></h1>
 
     <script src={{ url_for('static', filename='front-end.js') }}></script>
