--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         {% include 'waypoints_gfu.svg' %}
     </body>
     <label for="myCheck">Handicap:</label> 
-    <input type="checkbox" id="myCheck" onclick="handicap()">
+    <input type="checkbox" id="Handicap">
     <h1 id="h1"></h1>
 
     <script src={{ url_for('static', filename='front-end.js') }}></script>
