--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,6 @@
     <h1 id="h1"></h1>
     <h2 id="h2"></h2>
 
+    <script src={{ url_for('static', filename='wheelchair.js') }}></script>
     <script src={{ url_for('static', filename='front-end.js') }}></script>
 </html>
