--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title>Shortest Path Around Campus</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
     <body>
         {% include 'waypoints_gfu.svg' %}
