--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         <div class="right-element">
             <label for="myCheck">Handicap:</label> 
             <input type="checkbox" id="Handicap">
-            <h1 id="h1"></h1>
+            <h1 id="h1">Path Length:</h1>
         </div>
     </div>
     <h2 id="h2"></h2>
