--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
             </body>
         </div>
         <div class="right-element">
-            <label for="myCheck">Handicap:</label> 
+            <label for="myCheck" id="handilabel">Handicap:</label> 
             <input type="checkbox" id="Handicap">
             <h1 id="h1">Path Length:</h1>
         </div>
