--- a/static/style.css
+++ b/static/style.css
@@ -18,11 +18,6 @@ h1{
     display: inline-block;
     float: left;
 }
-
-.handilabel{
-    font-size: 250%;
-}
-
-.input{
+#right-elemnt label{
     font-size: 150%;
 }
