--- a/static/style.css
+++ b/static/style.css
@@ -20,4 +20,9 @@ h1{
 }
 #handilabel{
     font-size: 150%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#handicap{
+    width: 200%;
+    height: 200%;
 }
