--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,9 @@
     <title>Shortest Path Around Campus</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
+    <h5>Instructions</h5>
+    <p>Welcome to SPAC! Click on any dot on campus and click on any other dot to get the shortest path accros the George Fox Campus.</p>
+    <p>Double click to reset</p>
     <div class="container">
         <div class="left-element">
             <body>
