--- a/static/style.css
+++ b/static/style.css
@@ -26,3 +26,9 @@ h1{
     width: 500%;
     height: 500%;
 }
+h5{
+    font-family: Arial, Helvetica, sans-serif;
+}
+p{
+    font-family: Arial, Helvetica, sans-serif;
+}
