--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
             <label for="myCheck">Handicap:</label> 
             <input type="checkbox" id="Handicap">
             <h1 id="h1">Path Length:</h1>
+            <h3 id="h3">Estimated Time:</h3>
         </div>
     </div>
     <h2 id="h2"></h2>
