--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="right-element">
             <label for="myCheck" id="handilabel">Handicap:</label> 
-            <input type="checkbox" id="Handicap">
+            <input type="checkbox" id="Handicap" class="buttonss">
             <h1 id="h1">Path Length:</h1>
         </div>
     </div>
