--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,7 @@ h1{
     font-size: 150%;
     font-family: Arial, Helvetica, sans-serif;
 }
-#handicap{
+input.buttons{
     width: 500%;
     height: 500%;
 }
