--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
             </body>
         </div>
         <div class="right-element">
-            <label for="myCheck" id="handilabel">Handicap:</label> 
-            <input type="checkbox" id="Handicap" class="buttonss">
+            <label for="myCheck" id="handilabel">Handicap Accessibility:</label> 
+            <input type="checkbox" id="Handicap">
             <h1 id="h1">Path Length:</h1>
             <h1 id="h3">Estimated Time:</h1>
         </div>
