--- a/static/style.css
+++ b/static/style.css
@@ -19,6 +19,7 @@ h1{
     float: left;
 }
 #handilabel{
+    padding-top: 50px;
     font-size: 150%;
     font-family: Arial, Helvetica, sans-serif;
 }
