--- a/static/style.css
+++ b/static/style.css
@@ -17,9 +17,10 @@ h1{
 .right-element {
     display: inline-block;
     float: left;
+    padding-left: 100px;
 }
 #handilabel{
-    padding-top: 250px;
+    padding-top: 100px;
     font-size: 150%;
     font-family: Arial, Helvetica, sans-serif;
 }
