--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 
     <h1>Instructions</h1>
     <p>Welcome to SPAC! Click on any dot on campus and click on any other dot to get the shortest path accros the George Fox Campus.</p>
+    <p>If Handicap Accessibility is on... then outlined red waypoints are not handicap ccessible</p>
     <p>Double click to reset</p>
     <div class="container">
         <div class="left-element">
