--- a/templates/index.html
+++ b/templates/index.html
@@ -23,4 +23,5 @@
     <h2 id="h2"></h2>
 
     <script src={{ url_for('static', filename='front-end.js') }}></script>
+    <script src={{ url_for('static', filename='wheelchair.js') }}></script>
 </html>
